--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,9 +12,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Title<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
+                <div class="intro-heading">The Tech Cave<br></div>
+                <!-- <div class="intro-lead-in">Date</div> -->
+                <!-- <div class="intro-lead-in">Location</div> -->
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
