--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">The Tech Cave<br></div>
-                <!-- <div class="intro-lead-in">Date</div> -->
+                <div class="intro-lead-in">A massive database of information about IT for those who need it.</div>
                 <!-- <div class="intro-lead-in">Location</div> -->
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
